@@ -682,6 +682,7 @@ while ($poller_runs_completed < $poller_runs) {
 
 					log_cacti_stats($loop_start, $method, $concurrent_processes, $max_threads,
 						($poller_id == '1' ? cacti_sizeof($polling_hosts) - 1 : cacti_sizeof($polling_hosts)), $hosts_per_process, $num_polling_items, $rrds_processed);
+					poller_run_stats($loop_start);
 
 					break;
 				} else {
@@ -709,6 +710,7 @@ while ($poller_runs_completed < $poller_runs) {
 						api_plugin_hook_function('poller_exiting');
 						log_cacti_stats($loop_start, $method, $concurrent_processes, $max_threads,
 							($poller_id == '1' ? cacti_sizeof($polling_hosts) - 1 : cacti_sizeof($polling_hosts)), $hosts_per_process, $num_polling_items, $rrds_processed);
+						poller_run_stats($loop_start);
 
 						break;
 					} elseif (microtime(true) - $mtb < 1) {
@@ -806,6 +808,7 @@ while ($poller_runs_completed < $poller_runs) {
 	if (!$logged) {
 		log_cacti_stats($loop_start, $method, $concurrent_processes, $max_threads,
 			($poller_id == '1' ? cacti_sizeof($polling_hosts) - 1 : cacti_sizeof($polling_hosts)), $hosts_per_process, $num_polling_items, $rrds_processed);
+		poller_run_stats($loop_start);
 	}
 }
 
@@ -1029,6 +1032,57 @@ function log_cacti_stats($loop_start, $method, $concurrent_processes, $max_threa
 	api_plugin_hook_function('cacti_stats_update', $perf_data);
 
 	$logged = true;
+}
+
+function poller_run_stats ($loop_start) {
+	global $poller_id, $poller_interval, $poller_lastrun;
+
+	$threshold_1h = read_config_option('poller_warning_1h_ratio');
+	$threshold_1h_count = read_config_option('poller_warning_1h_count');
+	$threshold_24h = read_config_option('poller_warning_24h_ratio');
+
+	$loop_end = microtime(true);
+	$total_time  = $loop_end-$loop_start;
+
+	// last day stats
+	if (date('j', $poller_lastrun) != date('j')) {
+		$min = db_fetch_cell('SELECT IFNULL(MIN(total_time),0) FROM poller_time_stats');
+		$max = db_fetch_cell('SELECT IFNULL(MAX(total_time),0) FROM poller_time_stats');
+		$sum = db_fetch_cell('SELECT IFNULL(SUM(total_time),0) FROM poller_time_stats');
+		$count = db_fetch_cell('SELECT COUNT(total_time) FROM poller_time_stats');
+
+		if ($count > 0) {
+			$ratio = round($sum/$count,2);
+
+			cacti_log(__("24 hours avg. poller run time is $ratio seconds, min: $min, max: $max") , true, 'POLLER');
+
+			if ($ratio/$poller_interval > $threshold_24h/100 && $threshold_24h > 0) {
+				cacti_log(__("WARNING: 24 hours poller avg. run time reached more than $threshold_24h% of time limit") , true, 'POLLER');
+				admin_email(__('Cacti System Warning'), __('WARNING: 24 hours poller (id %d) avg. run time is %f seconds (more than %d &#37; of time limit)', $poller_id, $ratio,$threshold_24h));
+			}
+		}
+	}
+
+	// last hour stats
+	if (date('G', $poller_lastrun) != date('G')) {
+
+		$count = db_fetch_cell_prepared('SELECT count(total_time) FROM poller_time_stats WHERE time > DATE_SUB(NOW(), INTERVAL 60 minute)
+				AND (total_time/?) > (?/100)',
+				array($poller_interval, $threshold_1h));
+
+		if ($count > $threshold_1h_count && $threshold_1h_count > 0) {
+			cacti_log(__("WARNING: In last hour poller run time $count times (limit $threshold_1h_count) reached more than $threshold_1h% of time limit") , true, 'POLLER');
+			admin_email(__('Cacti System Warning'), __('WARNING: In last hour poller (id %d) run time %d times reached more than %d &#37; of time limit', $poller_id, $threshold_1h_count, $threshold_1h));
+		}
+	}
+
+	// poller time statistics for last day
+	db_execute_prepared('INSERT INTO poller_time_stats (poller_id,total_time,time)
+		VALUES (?,?,now())',
+		array($poller_id, round($total_time, 4)));
+
+	// delete old stats
+	db_execute('DELETE FROM poller_time_stats WHERE `time` <  DATE_SUB(NOW(), INTERVAL 24 HOUR)');
 }
 
 function multiple_poller_boost_check() {
