@@ -55,6 +55,7 @@ function support_view_tech() {
 		'dbperms'    => __('Database Permissions'),
 		'phpinfo'    => __('PHP Info'),
 		'changelog'  => __('ChangeLog'),
+		'poller'     => __('Poller'),
 	);
 
 	/* set the default tab */
@@ -832,6 +833,72 @@ function support_view_tech() {
 		}
 		print '</td>';
 
+		form_end_row();
+	} elseif (get_request_var('tab') == 'poller') {
+		$problematic = db_fetch_assoc('SELECT id,description,polling_time, avg_time
+		FROM host WHERE disabled = "" ORDER BY polling_time DESC LIMIT 20');
+
+		html_section_header(__('Worst 20 polling time hosts'), 2);
+
+		form_alternate_row();
+		print "		<td colspan='2' style='text-align:left;padding:0px'>";
+
+		if (cacti_sizeof($problematic)) {
+			print "<table id='tables' class='cactiTable' style='width:100%'>";
+			print '<thead>';
+			print "<tr class='tableHeader'>";
+			print "  <th class='tableSubHeaderColumn'>" . __('ID') . '</th>';
+			print "  <th class='tableSubHeaderColumn'>" . __('Description') . '</th>';
+			print "  <th class='tableSubHeaderColumn'>" . __('Avg. polling time') . '</th>';
+			print "  <th class='tableSubHeaderColumn right'>" . __('Actual polling time') . '</th>';
+			print '</tr>';
+			print '</thead>';
+			foreach ($problematic as $host) {
+				form_alternate_row();
+				print '<td>' . $host['id'] . '</td>';
+				print '<td>' . $host['description'] . '</td>';
+				print '<td class="right">' . number_format_i18n($host['avg_time'],3) . '</td>';
+				print '<td class="right">' . number_format_i18n($host['polling_time'],3) . '</td>';
+				form_end_row();
+			}
+
+			print "</table>";
+		} else {
+			print __('No host found');
+		}
+		print '</td>';
+		form_end_row();
+
+		$problematic = db_fetch_assoc('SELECT id,description,failed_polls/total_polls as ratio
+			FROM host WHERE disabled = "" ORDER BY ratio DESC LIMIT 20');
+
+		html_section_header(__('Worst 20 failed/total polls ratio'), 2);
+
+		form_alternate_row();
+		print "		<td colspan='2' style='text-align:left;padding:0px'>";
+
+		if (cacti_sizeof($problematic)) {
+			print "<table id='tables' class='cactiTable' style='width:100%'>";
+			print '<thead>';
+			print "<tr class='tableHeader'>";
+			print "  <th class='tableSubHeaderColumn'>" . __('ID') . '</th>';
+			print "  <th class='tableSubHeaderColumn'>" . __('Description') . '</th>';
+			print "  <th class='tableSubHeaderColumn right'>" . __('Failed/Total polls') . '</th>';
+			print '</tr>';
+			print '</thead>';
+			foreach ($problematic as $host) {
+				form_alternate_row();
+				print '<td>' . $host['id'] . '</td>';
+				print '<td>' . $host['description'] . '</td>';
+				print '<td class="right">' . number_format_i18n($host['ratio'],3) . '</td>';
+				form_end_row();
+			}
+
+			print "</table>";
+		} else {
+			print __('No host found');
+		}
+		print '</td>';
 		form_end_row();
 	} else {
 		$php_info = utilities_php_modules();
